--- a/css/styles.css
+++ b/css/styles.css
@@ -98,7 +98,7 @@ h1 {
 }
 .header {
   grid-area: header;
-  background-image: url(../images/hero.svg);
+  background-image: url(../images/hero2.png);
   background-size: cover;
   background-repeat: no-repeat;
   height: 35em;
@@ -113,7 +113,7 @@ h1 {
   align-items: center;
   justify-content: center;
   text-align: center;
-  background-image: url(../images/special-menu-bg.svg);
+  background-image: url(../images/store-bg.svg);
   height: 30em;
 }
 .nosotros p {
@@ -137,7 +137,7 @@ h1 {
 /*======== MENU ========*/
 .menu {
   grid-area: menu;
-  background-image: url(../images/store-bg.svg);
+  background-image: url(../images/menu-bg2.jpg);
 
   background-position: right;
   background-attachment: fixed;
@@ -204,7 +204,7 @@ h1 {
   display: flex;
   flex-shrink: 1;
   flex-direction: column;
-  background-image: url(../images/special-menu-bg.svg);
+  background-image: url(../images/store-bg.svg);
   height: 49em;
   text-align: center;
 }
