--- a/css/styles.css
+++ b/css/styles.css
@@ -98,7 +98,7 @@ h1 {
 }
 .header {
   grid-area: header;
-  background-image: url(../images/hero2.png);
+  background-image: url(../images/hero2.webp);
   background-size: cover;
   background-repeat: no-repeat;
   height: 35em;
@@ -137,7 +137,7 @@ h1 {
 /*======== MENU ========*/
 .menu {
   grid-area: menu;
-  background-image: url(../images/menu-bg2.jpg);
+  background-image: url(../images/menu-bg2.webp);
 
   background-position: right;
   background-attachment: fixed;
