--- a/css/styles.css
+++ b/css/styles.css
@@ -30,12 +30,13 @@ body {
   font-family: 'League Spartan', sans-serif;
   color: var(--secundario);
   scroll-behavior: smooth;
+  width: 100vw;
 }
 p {
   font-weight: 400;
   line-height: 40px;
-  letter-spacing: 0.12em;
-  font-size: 1.2em;
+  letter-spacing: 0.12rem;
+  font-size: 1.2rem;
   color: white;
 }
 h1 {
@@ -99,6 +100,7 @@ h1 {
 .header {
   grid-area: header;
   background-image: url(../images/hero2.webp);
+  width: 100%;
   background-size: cover;
   background-repeat: no-repeat;
   height: 35em;
@@ -343,7 +345,7 @@ h1 {
 /*======== MEDIA QUERIES ========*/
 @media screen and (max-width: 768px) {
   p {
-    font-size: 1.6em;
+    font-size: 1.6rem;
   }
   .form-input__nombre {
     grid-column: 1/3;
@@ -359,12 +361,17 @@ h1 {
     margin: 0;
     grid-template-rows: 64px 64px 64px 300px;
   }
+  .container-md {
+    justify-self: center;
+    width: auto !important;
+  }
   .nosotros {
     height: 40em;
   }
   .nave {
     flex-direction: column;
     font-size: 2em;
+    padding-bottom: 2rem;
   }
   .nav-item {
     padding-bottom: 10px;
@@ -385,9 +392,13 @@ h1 {
     height: 90em;
     justify-content: flex-start;
   }
+
   .form label {
     width: 1fr;
     margin: 0;
+  }
+  .store-container {
+    overflow: hidden;
   }
 }
 @media screen and (max-width: 576px) {
