--- a/css/styles.css
+++ b/css/styles.css
@@ -8,6 +8,8 @@
 /*======== ESTRUCTURA ========*/
 .grid-container {
   display: grid;
+  grid-template-columns: repeat(2, 1fr);
+
   grid-template-areas:
     'nave nave'
     'header header'
@@ -30,11 +32,10 @@ body {
   font-family: 'League Spartan', sans-serif;
   color: var(--secundario);
   scroll-behavior: smooth;
-  width: 100vw;
 }
 p {
   font-weight: 400;
-  line-height: 40px;
+  line-height: 2;
   letter-spacing: 0.12rem;
   font-size: 1.2rem;
   color: white;
@@ -69,7 +70,6 @@ h1 {
   justify-content: space-evenly;
   align-items: center;
   background-color: var(--principal);
-  height: 1FR;
 }
 
 .nav-item {
@@ -78,6 +78,16 @@ h1 {
   color: var(--secundario);
   font-size: 1.2em;
   text-decoration: none;
+  animation-name: entrada;
+  animation-duration: 2.5s;
+}
+@keyframes entrada {
+  from {
+    opacity: 6%;
+  }
+  to {
+    opacity: 100%;
+  }
 }
 .nav-item:hover {
   filter: brightness(1.5);
@@ -94,15 +104,13 @@ h1 {
 }
 
 /*======== HEADER ========*/
-#hero {
-  width: 100%;
-}
+
 .header {
   grid-area: header;
   background-image: url(../images/hero2.webp);
-  width: 100%;
   background-size: cover;
   background-repeat: no-repeat;
+  background-position: center;
   height: 35em;
 }
 
@@ -116,7 +124,7 @@ h1 {
   justify-content: center;
   text-align: center;
   background-image: url(../images/store-bg.svg);
-  height: 30em;
+  padding: 3rem;
 }
 .nosotros p {
   max-width: 50em;
@@ -140,17 +148,15 @@ h1 {
 .menu {
   grid-area: menu;
   background-image: url(../images/menu-bg.webp);
-
   background-position: right;
   background-attachment: fixed;
-  height: 105em;
 }
 
 .menu-container {
   display: grid;
   row-gap: 2em;
   grid-template-columns: repeat(10, 1fr);
-  grid-template-rows: 100px 1fr 1fr 1fr 200px;
+  grid-template-rows: 6em 1fr 1fr 1fr 12em;
 }
 .menu-container h1 {
   align-self: center;
@@ -188,8 +194,7 @@ h1 {
   border-bottom: 4px solid var(--secundario);
   border-left: none;
   border-right: none;
-  width: 350px;
-  height: 87px;
+  padding: 1em;
   color: var(--secundario);
   font-weight: 400;
   font-size: 1.4em;
@@ -204,10 +209,8 @@ h1 {
 .store {
   grid-area: store;
   display: flex;
-  flex-shrink: 1;
   flex-direction: column;
   background-image: url(../images/store-bg.svg);
-  height: 49em;
   text-align: center;
 }
 .store h1 {
@@ -216,8 +219,6 @@ h1 {
 }
 .store-container {
   display: flex;
-  width: 1fr;
-
   align-items: center;
   justify-content: space-evenly;
   margin-bottom: 60px;
@@ -226,6 +227,7 @@ h1 {
   width: 300px;
   height: 400px;
   border: 1px solid white;
+  margin: 1em;
 }
 .store-item:hover {
   filter: grayscale(90%) blur(1px);
@@ -237,8 +239,9 @@ h1 {
   height: 100%;
   object-fit: cover;
 }
-.store-container .boton {
+.store .boton {
   align-self: center;
+  margin-bottom: 2em;
 }
 
 /*======== CONTACTO ========*/
@@ -253,11 +256,13 @@ h1 {
 .contacto p {
   position: relative;
   align-self: flex-end;
-  font-size: 13px;
+  font-size: 0.8em;
   line-height: 1.7em;
 }
-#mapa {
+.map-container {
   margin-right: 1em;
+  margin-bottom: 1em;
+  margin-left: 1em;
 }
 #contact-logo {
   width: 14%;
@@ -274,6 +279,10 @@ h1 {
 .map-container {
   margin-top: 8em;
 }
+.map-container {
+  position: relative;
+}
+
 #form-textarea {
   resize: none;
 }
@@ -287,6 +296,7 @@ h1 {
   border-radius: 4px;
   color: var(--secundario);
 }
+
 .form label {
   border-bottom: 1px solid var(--secundario);
   padding: 0.5em;
@@ -337,13 +347,29 @@ h1 {
   border-radius: 8px;
   opacity: 1;
   filter: brightness(1.3);
+  transition: all 0.6s;
 }
 #copy {
   color: var(--secundario);
+  font-size: 1em;
   opacity: 0.7;
+  text-align: center;
 }
 /*======== MEDIA QUERIES ========*/
+@media screen and (max-width: 992px) {
+  #cafe3 {
+    display: none;
+  }
+}
 @media screen and (max-width: 768px) {
+  .header {
+    background-position: center;
+    height: 30em;
+  }
+  #cafe2,
+  #cafe3 {
+    display: none;
+  }
   p {
     font-size: 1.6rem;
   }
@@ -365,12 +391,10 @@ h1 {
     justify-self: center;
     width: auto !important;
   }
-  .nosotros {
-    height: 40em;
-  }
+
   .nave {
     flex-direction: column;
-    font-size: 2em;
+    font-size: 1.3em;
     padding-bottom: 2rem;
   }
   .nav-item {
@@ -378,18 +402,18 @@ h1 {
   }
   #logo {
     order: -1;
-    width: 50%;
+    width: 60%;
   }
   .header {
     background-size: cover;
   }
   #contact-logo {
     position: relative;
-    width: 15%;
+    width: 35%;
   }
   .contacto {
     flex-direction: column;
-    height: 90em;
+    height: 100%;
     justify-content: flex-start;
   }
 
@@ -400,24 +424,51 @@ h1 {
   .store-container {
     overflow: hidden;
   }
+  .map-container iframe {
+    width: 80vw;
+    height: 1005;
+  }
+  .menu {
+    width: 100%;
+  }
+
+  .menu-container {
+    width: 100%;
+  }
+  .footer {
+    width: 100%;
+  }
 }
 @media screen and (max-width: 576px) {
   .form label {
-    width: 1fr;
     margin: 0;
   }
-  .nosotros {
-    flex-grow: 2;
-  }
   .menu-boton {
-    width: fit-content;
     font-size: 1.2em;
   }
-
-  #cita {
-    font-size: 45px;
+  .header {
+    height: 20em;
   }
+  .item1,
+  .item2,
+  .item3 {
+    grid-column: 1/11;
+    border-radius: 0;
+  }
+  .menu-container {
+    row-gap: 3em;
+  }
+  .menu-container h1 {
+    font-size: 3em;
+    margin-top: 0.5em;
+  }
+
   .nosotros p {
-    font-size: 15px;
+    line-height: 2em;
+    font-size: 1.3em;
+  }
+
+  #form-button {
+    width: 100%;
   }
 }
